# HospitalAdministration

./: .gitignore  Appointment.cpp  Appointment.h  Appointments.cpp  CMakeLists.txt  Date_Time.cpp  Date_Time.h  Diagnoses.cpp  Diagnoses.h  Doctor.cpp  Doctor.h  Doctors.txt  Lab.cpp  Lab.h  Patient.cpp  Patient.h  Patients.txt  Record.cpp  Record.h  Slot.cpp  Slot.h  finalProject_kdegraw.cbp  finalProject_kdegraw.depend  finalProject_kdegraw.layout  main.cpp
src/: Appointment.cpp  Appointment.h  Date_Time.cpp  Date_Time.h  Diagnoses.cpp  Diagnoses.h  Doctor.cpp  Doctor.h  Lab.cpp  Lab.h  Patient.cpp  Patient.h  Record.cpp  Record.h  Slot.cpp  Slot.h  main.cpp
